gas/testsuite/gas/symver/symver11.d
@@ -1,2 +1,2 @@
 #name: symver symver11
-#error: .*symbol cannot be used on reloc
+#error: .*: symbol 'foo' with multiple versions cannot be used in relocation
